# lightweight_ml_framework

./: Makefile  README.md  pyproject.toml
api/: main.py  model.py
batch_prediction/: model.py
docker/: .Dockerfile-server
ml_experiments/: __init__.py  data.py  evaluation.py  experiment.py  model.py  train.py
ml_experiments/tests/: test_ml_experiments.py
scripts/: data_pulling.py  features_handling.py  trigger_experiment.py
